2003-01-18  Santi Camps <santi@gnome-db.org>

	* configure.in: added libgda/report/testing/Makefile
	* report/Makefile.am: added subdir testing
	* report/*: 
	* report/libgda-report/*: 
	* report/testing/*: 
		Changed my contact e-mail to santi@gnome-db.org
	* report/testing/gda-report-test.c: some new tests
	* report/libgda-report/Makefile.am: new sources added
	* report/libgda-report/gda-report.h: new sources added
	* report/libgda-report/gda-report-item.[ch]: new functions to add
	  sibling items and to replace items
	* report/libgda-report/gda-report-item-report.c:
	  Set and get reportheader and reportfooter 
	* report/libgda-report/gda-report-item-reportheader.[ch]:
	  All attributes implemented
	* report/libgda-report/gda-report-item-reportfooter.[ch]:
	  All attributes implemented

2003-01-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model-array.c (gda_data_model_array_append_row):
	passed the correct row number to gda_data_model_row_inserted.

2003-01-17  Nick Gorham <nick@easysoft.com>

	* providers/odbc/*: updated version of the ODBC provider.

2003-01-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-parameter.[ch] (gda_parameter_new_gobject): new function.

	* libgda/gda-client.h: updated argument names for events. Removed
	"error" signal, now obsoleted by "event_notification".

	* libgda/gda-client.c (connection_error_cb): pass a GdaError object as
	the parameter for the GDA_CLIENT_EVENT_ERROR event. Don't emit "error"
	signal.
	(gda_client_open_connection): no parameters for CONNECTION_OPENED
	event.
	(gda_client_class_init): don't create "error" signal.

	* libgda/gda-connection.c (gda_connection_finalize, gda_connection_new):
	no parameters for CONNECTION_OPENED/CONNECTION_CLOSED events.
.
2003-01-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-value.h: added GDA_VALUE_TYPE_GOBJECT type.

	* libgda/gda-value.c (gda_value_new_gobject, gda_value_get_gobject,
	gda_value_set_gobject): new functions.